# libri_backend

./: .env  Cargo.toml  Dockerfile  fly.toml
.cargo/: config.toml
.sqlx/: query-03090cbaa2d11daa4e52a0a6f033ad3bcdae89c8b32ccc35691ab993d210bdb6.json  query-0d276f2fc1698057b3d29a2d031989ee458c656b40d24dbb329183fbda2ff976.json  query-0eb818394dacb6cd772f7b5407ffeca278b2b4ffe001d7de79d5d5f8014d2fbd.json  query-10eefe5a5be37fa6e13318ee26ebcf33e2898074a628b6ddbbda7335c2fb8f11.json  query-15d84dc21a3edb8db2d880945c6978b2b0405b05e5135b103dd61441ae214575.json  query-17da94253c2b45c126e170946590a37d02d9d3cc26d30193355f8623b6084570.json  query-1a3f25bd0b2d007d6ae8ffd355e4c3220fa709e9ed139372d7238486f687ea8c.json  query-20d2a4af64ab3fc8f77932e7ec1c023640f3e47f815bd240b19dbfa9a74eeebb.json  query-24ae8a199595253e2f225c2d46252dc233729aa3dda30396ddd7d1b4e9d885c0.json  query-2dd84fc09937a2116113edd2d31cababf891c0570b7b1438541f834bf2d39f03.json  query-2dd9a38939996965f77a7f6cc5acb991090450013e2ad56dcecbc1cc031445ce.json  query-2dff5ad718a1d77f8c2261d47eae13e2a74017a5d34e12ee02eb2e1d8ea9707f.json  query-2e3f699c0fd7f7608093c46aa4754443968dc7460ee8e50257fa1eaffb727802.json  query-32c6ac30ad65745edbecc44c40eb5943d2f5a7f90dd21c3288c6a1f591d6b518.json  query-3c53591599aacc0f932133bfaa8a763fec86b9b943cd0939901998552cf36aae.json  query-3e4e5c4be44ef130a6e886ed815bdf3e8d3d3f61e17713aa10f9912522cd84ca.json  query-464725c9f9aba7653ddefb5281ec5ecacfab9b0d109c71e80ed731f96eab9370.json  query-49b22a0272a5df7b6f445df982ec0df14f65e31a5d49457ee951c6de5f72326b.json  query-4b8069b73e1fef3d7ce27de13935c69ba30aecb6c9b4c855e00e781757ec69dd.json  query-4d57d9695b74c06fa5b7fda56de8dfec0d32499abf00ffea65008f72faa9d9c3.json  query-514cdcb0f31b2e3509f2bb3cf4994dd6f75a7d30c7c9072875705d8a85b9b5f8.json  query-524ff1c704cead5a141220cc895ef78fc98baaa13f275a85f45a47ea4896560a.json  query-57c83b6a6482a9a0c853340568a6a3e91bdcab1a73c8bd57434f26abe8db0910.json  (+57 more)
(+35 files in other folders)
