[package]
name = "libri_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = ["derive", "runtime-tokio-rustls", "mysql", "time"] }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
hex = "0.4.3"
env_logger = "0.11.5"
lettre = "0.11.9"
rand = "0.8.5"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
actix-cors = "0.7.0"
