[package]
name = "libri_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "derive",
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
] }
tokio = { version = "1.40.0", features = ["full"] }
dotenv = "0.15.0"
hex = "0.4.3"
env_logger = "0.11.5"
lettre = "0.11.9"
rand = "0.8.5"
argon2 = "0.5.3"
jsonwebtoken = "9.3.0"
chrono = { version = "0.4.38", features = ["serde"] }
actix-cors = "0.7.0"
redis = { version = "0.27.5", features = ["tls-native-tls"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
